Fixed Mini Expandable Sidenav styles on Mobile.

--- a/gwt-material/src/main/resources/gwt/material/design/public/css/overridecss.css
+++ b/gwt-material/src/main/resources/gwt/material/design/public/css/overridecss.css
@@ -851,6 +851,10 @@ ul.side-nav.mini-with-expand li a span {
 		height: 100%;
 		background: #fff;
 	}
+	ul.side-nav.mini-with-expand {
+		top: 56px;
+		height: calc(100vh - 56px);
+	}
 	.navmenu-permanent, .drag-target,#sidenav-overlay{
 		visibility: visible !important;
 	}
